objects/Home_Page_Slider_Components__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Component_Code__c</fullName>
        <externalId>true</externalId>
        <label>Component Code</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Component_Description__c</fullName>
        <label>Component Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_URL__c</fullName>
        <label>Component URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Class__c</fullName>
        <label>Icon Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Home Page Slider Components</label>
</CustomObject>